--- a/src/random_forest.ipynb
+++ b/src/random_forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f72dba13",
+   "id": "9fa965d3",
    "metadata": {},
    "source": [
     "# This is an attempt at a random forest classifier for the ancient DNA data"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3583c4eb",
+   "id": "546d8ba4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8ed60376",
+   "id": "c0a2b21a",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4c568a6f",
+   "id": "20bc21d6",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dd12f97a",
+   "id": "f571b57e",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dc619481",
+   "id": "25b3c9b3",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "27ebafd0",
+   "id": "c677fb39",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "673ac437",
+   "id": "29a5a351",
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d5fc08f",
+   "id": "c400d9a7",
    "metadata": {},
    "source": [
     "## Data Preprocessing"
@@ -813,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "586c5cab",
+   "id": "eec071b5",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e14b8c46",
+   "id": "967c92fe",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "08762dc8",
+   "id": "cffce919",
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "eca80bb4",
+   "id": "255439a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0086ffb4",
+   "id": "3eb5e8a6",
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fb114683",
+   "id": "0788b2cc",
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "18e17b82",
+   "id": "a10952bd",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1c1b59e8",
+   "id": "eff03fee",
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ccc26e0",
+   "id": "0e1e41de",
    "metadata": {},
    "source": [
     "No visible correlation seen in my opinion"
@@ -1035,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e91f5a75",
+   "id": "6e23093c",
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3902d99e",
+   "id": "769779f7",
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2baa4e5",
+   "id": "45182b37",
    "metadata": {},
    "source": [
     "Lets assume here that country of origin has no correlation with dateBP.\n",
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8373fb42",
+   "id": "d3bff500",
    "metadata": {},
    "source": [
     "### Split raw data and decision tree"
@@ -1349,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0ea194c0",
+   "id": "c2d07415",
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fcfdb0a6",
+   "id": "422e0ad0",
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "79cb73ea",
+   "id": "5423b9b8",
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4a9ebc6d",
+   "id": "f22c5a50",
    "metadata": {},
    "outputs": [
     {
@@ -1441,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3a317c31",
+   "id": "3ae4ecdc",
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1464,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a6926b05",
+   "id": "053f3145",
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d3f1179",
+   "id": "1b42d1ed",
    "metadata": {},
    "source": [
     "### Fine tuning RF"
@@ -1496,7 +1496,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "54b542b8",
+   "id": "0112fcb9",
    "metadata": {},
    "outputs": [
     {
@@ -2048,8 +2048,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "57898b74",
+   "execution_count": 44,
+   "id": "050795d5",
    "metadata": {},
    "outputs": [
     {
@@ -2082,36 +2082,36 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.738904e+06</td>\n",
-       "      <td>0.333793</td>\n",
+       "      <th>42</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>sqrt</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.359032e+06</td>\n",
+       "      <td>0.669431</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   num_estimators max_features  max_depth           MSE       R^2\n",
-       "1              10            1        2.0  2.738904e+06  0.333793"
+       "    num_estimators max_features  max_depth           MSE       R^2\n",
+       "42            1000         sqrt        NaN  1.359032e+06  0.669431"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# min MSE\n",
-    "df_rf_finetune[df_rf_finetune[\"MSE\"]==df_rf_finetune[\"MSE\"].max()]"
+    "df_rf_finetune[df_rf_finetune[\"MSE\"]==df_rf_finetune[\"MSE\"].min()]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9c2c4823",
+   "id": "717ac6f0",
    "metadata": {},
    "outputs": [
     {
@@ -2172,7 +2172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "885f200e",
+   "id": "36352cdc",
    "metadata": {},
    "source": [
     "## XGBOOST"
@@ -2181,7 +2181,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b02162f4",
+   "id": "df86a7b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2192,7 +2192,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "5b6c7e54",
+   "id": "b1be835b",
    "metadata": {},
    "outputs": [
     {
@@ -2496,7 +2496,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e586aeb4",
+   "id": "19148737",
    "metadata": {},
    "outputs": [
     {
@@ -2521,7 +2521,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "60cb7fe2",
+   "id": "6fb06739",
    "metadata": {},
    "outputs": [
     {
@@ -2550,7 +2550,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "979af4da",
+   "id": "71cfeefc",
    "metadata": {},
    "outputs": [
     {
@@ -2589,7 +2589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2979d362",
+   "id": "e3d0ae8a",
    "metadata": {},
    "source": [
     "## Cross validation"
@@ -2598,7 +2598,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "1607bced",
+   "id": "c9d1709f",
    "metadata": {},
    "outputs": [
     {
@@ -2884,7 +2884,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe64a3d3",
+   "id": "32acfae0",
    "metadata": {},
    "outputs": [],
    "source": []
